<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
   <LinearLayout 
		    android:orientation="horizontal" 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"> 
		    
     <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishedsteps"
            android:textColor="#FFFFFFFF"
            android:textSize="18dp" />
      
    <TextView android:id="@+id/steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp" />
    
    <ImageView 
        android:contentDescription="@string/DISPLAY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:src="@drawable/check" />
    
    </LinearLayout>
    
   
    <LinearLayout 
		    android:orientation="horizontal" 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent">
    
          <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/consumedcalories"
            android:textColor="#FFFFFFFF"
            android:textSize="18dp" />
          
        <TextView android:id="@+id/calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp" />
        
       </LinearLayout>
        
    
        <TextView android:id="@+id/datetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFFFF"
            android:textSize="20dp" />
 
</LinearLayout>